<resources>
    <string name="app_name">PSWTestApp</string>
    <string name="add_car_button">add car button</string>
    <string name="try_again">Try again</string>
    <string name="settings">Settings</string>
    <string name="hint_description">description</string>
    <string name="hint_price">price</string>
    <string name="hint_manufacture">manufacture</string>
    <string name="hint_brand">brand</string>
    <string name="save">Save</string>
    <string name="create_car">Create car</string>
    <string name="create_the_new_car">Create the new car</string>
    <string name="illegal_price">incorrect price</string>
    <string name="field_is_empty">field is empty</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="filters">Filters</string>
</resources>